// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EndpointsOverlay EndpointsOverlayWithCustomMapMarkers smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(1572px, 191px) rotateX(0deg) rotateZ(0deg);"
      >
        <svg viewbox="0 0 512 512"
             height="40"
             width="40"
             aria-hidden="true"
             focusable="false"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
             color="orange"
             class="StyledIconBase-ea9ulj-0 hPhvO"
        >
          <path fill="currentColor"
                d="M290.59 192c-20.18 0-106.82 1.98-162.59 85.95V192c0-52.94-43.06-96-96-96-17.67 0-32 14.33-32 32s14.33 32 32 32c17.64 0 32 14.36 32 32v256c0 35.3 28.7 64 64 64h176c8.84 0 16-7.16 16-16v-16c0-17.67-14.33-32-32-32h-32l128-96v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V289.86c-10.29 2.67-20.89 4.54-32 4.54-61.81 0-113.52-44.05-125.41-102.4zM448 96h-64l-64-64v134.4c0 53.02 42.98 96 96 96s96-42.98 96-96V32l-64 64zm-72 80c-8.84 0-16-7.16-16-16s7.16-16 16-16 16 7.16 16 16-7.16 16-16 16zm80 0c-8.84 0-16-7.16-16-16s7.16-16 16-16 16 7.16 16 16-7.16 16-16 16z"
          >
          </path>
        </svg>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(-77px, 384px) rotateX(0deg) rotateZ(0deg);"
      >
        <svg viewbox="0 0 576 512"
             height="40"
             width="40"
             aria-hidden="true"
             focusable="false"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
             class="StyledIconBase-ea9ulj-0 hPhvO"
        >
          <path fill="currentColor"
                d="M298.06 224 448 277.55V496a16 16 0 0 1-16 16h-64a16 16 0 0 1-16-16V384H192v112a16 16 0 0 1-16 16h-64a16 16 0 0 1-16-16V282.09C58.84 268.84 32 233.66 32 192a32 32 0 0 1 64 0 32.06 32.06 0 0 0 32 32zM544 112v32a64 64 0 0 1-64 64h-32v35.58l-128-45.71V48c0-14.25 17.22-21.39 27.31-11.31L374.59 64h53.63c10.91 0 23.75 7.92 28.62 17.69L464 96h64a16 16 0 0 1 16 16zm-112 0a16 16 0 1 0-16 16 16 16 0 0 0 16-16z"
          >
          </path>
        </svg>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib maplibregl-attrib-empty mapboxgl-attrib-empty"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
          </div>
        </details>
      </div>
    </div>
    <div>
    </div>
  </div>
</div>
`;

exports[`EndpointsOverlay EndpointsOverlayWithIntermediatePlace smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(1572px, 191px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Portland City Grill"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__StackedCircle-sc-50mmra-1 bEwDCN"
          >
            <path fill="currentColor"
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf styled__StackedLocationIcon-sc-50mmra-2 bXcJpK"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(1059px, 99px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Powell's City of Books"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__StackedCircle-sc-50mmra-1 bEwDCN"
          >
            <path fill="currentColor"
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__PlaceIcon-sc-n5xcvc-1 dDjQnL styled__StackedLocationIcon-sc-50mmra-2 bXcJpK"
          >
            <path fill="currentColor"
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
            >
            </path>
          </svg>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(-77px, 384px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Portland Towers"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 384 512"
               height="26"
               width="26"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__StackedLocationIcon-sc-50mmra-2 styled__StackedToIcon-sc-50mmra-3 bXcJpK hLzWPt"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 384 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__ToIcon-sc-50mmra-5 dzlEOo"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            (modified) ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
    <div>
    </div>
  </div>
</div>
`;

exports[`EndpointsOverlay EndpointsOverlayWithUnnamedPlace smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(1572px, 191px) rotateX(0deg) rotateZ(0deg);"
      >
        <span class="styled__StackedIconContainer-sc-50mmra-4 emDkzO">
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__StackedCircle-sc-50mmra-1 bEwDCN"
          >
            <path fill="currentColor"
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf styled__StackedLocationIcon-sc-50mmra-2 bXcJpK"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(-77px, 384px) rotateX(0deg) rotateZ(0deg);"
      >
        <span class="styled__StackedIconContainer-sc-50mmra-4 emDkzO">
          <svg viewbox="0 0 384 512"
               height="26"
               width="26"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__StackedLocationIcon-sc-50mmra-2 styled__StackedToIcon-sc-50mmra-3 bXcJpK hLzWPt"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 384 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__ToIcon-sc-50mmra-5 dzlEOo"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            (modified) ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
    <div>
    </div>
  </div>
</div>
`;

exports[`EndpointsOverlay EndpointsOverlayWithUserSettings smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(1572px, 191px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Portland City Grill"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__StackedCircle-sc-50mmra-1 bEwDCN"
          >
            <path fill="currentColor"
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf styled__StackedLocationIcon-sc-50mmra-2 bXcJpK"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(-77px, 384px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Portland Towers"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 384 512"
               height="26"
               width="26"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__StackedLocationIcon-sc-50mmra-2 styled__StackedToIcon-sc-50mmra-3 bXcJpK hLzWPt"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 384 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__ToIcon-sc-50mmra-5 dzlEOo"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib maplibregl-attrib-empty mapboxgl-attrib-empty"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
          </div>
        </details>
      </div>
    </div>
    <div>
    </div>
  </div>
</div>
`;

exports[`EndpointsOverlay EndpointsOverlayWithoutUserSettings smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(1572px, 191px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Portland City Grill"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__StackedCircle-sc-50mmra-1 bEwDCN"
          >
            <path fill="currentColor"
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 512 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf styled__StackedLocationIcon-sc-50mmra-2 bXcJpK"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
        </span>
      </div>
      <div class="maplibregl-marker mapboxgl-marker maplibregl-marker-anchor-center mapboxgl-marker-anchor-center"
           style="transform: translate(-50%, -50%) translate(-77px, 384px) rotateX(0deg) rotateZ(0deg);"
      >
        <span title="Portland Towers"
              class="styled__StackedIconContainer-sc-50mmra-4 emDkzO"
        >
          <svg viewbox="0 0 384 512"
               height="26"
               width="26"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__StackedLocationIcon-sc-50mmra-2 styled__StackedToIcon-sc-50mmra-3 bXcJpK hLzWPt"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <svg viewbox="0 0 384 512"
               height="20"
               width="20"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE styled__ToIcon-sc-50mmra-5 dzlEOo"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib maplibregl-attrib-empty mapboxgl-attrib-empty"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
          </div>
        </details>
      </div>
    </div>
    <div>
    </div>
  </div>
</div>
`;
